2006-05-24  Matthew Gregan  <kinetik@orcon.net.nz>

	* win32/fs.cc: Add win32_strerror() and use it in
	rename_clobberingly() rather than displaying a raw error number to
	the user.
	* netxx/osutil.{cxx,h}: Add OS-specific strerror function.  This
	continues to call strerror() on POSIX, and tries using
	FormatMessage() and a built-in error message table on Win32.
	* netxx/{accept,datagram,peer,probe_select,recvfrom}.cxx,
	netxx/{resolve_gethostbyname,serverbase,socket,sockopt}.cxx,
	netxx/{streambase,streamserver}.cxx: s/strerror/Netxx::str_error/g.

2006-05-23  Timothy Brownawell  <tbrownaw@gmail.com>

	* tester.cc tester.lua: New files, which will eventually become a
	new testsuite system.
	* Makefile.am: Break sanity.* and dependencies out as
	SANITY_CORE_SOURCES. Break lua.* and non-sanity dependencies out
	as LUAEXT_SOURCES. Right now these are just included into MOST_SOURCES,
	maybe compile them into .a files later? New target tester also
	uses these.

2006-05-23  Richard Levitte  <richard@levitte.org>

	* po/sv.po: A fuzzy to change.

2006-05-22  Timothy Brownawell  <tbrownaw@gmail.com>

	* file_io.{cc,hh} localized_file_io.{cc,hh}: Split off the functions
	that use lua_hooks (to get localization settings) into a separate file.
	* Makefile.am: Adjust for having new files.
	* roster.cc work.cc diff_patch.cc cmd_diff_log.cc:
	* cmd_files.cc cmd_ws_commit.cc: Adjust includes.

2006-05-22  Timothy Brownawell  <tbrownaw@gmail.com>

	* transforms.{cc,hh} charset.{cc,hh} simplestring_xform.{cc,hh}:
	Split up transforms.cc . Hex, base64, gzip, and ident stay in
	transforms. Simple string stuff (no botan or idna) goes in
	simplestring_xform. Charset stuff goes in charset.
	* Makefile.am unit_tests.{cc,hh}: Adjust for having new files.
	* 20 others: Adjust includes.

2006-05-22  Timothy Brownawell  <tbrownaw@gmail.com>

	* work.{cc,hh} constants.{cc,hh}: Move attribute strings to constants.
	* transforms.cc: Include constants.hh instead of work.hh .